--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name       = "celestia-core-rpc"
 version    = "0.34.0"
 edition    = "2021"
 license    = "Apache-2.0"
-homepage   = "https://www.celestiaorg.com/"
+homepage   = "https://celestia.org/"
 repository = "https://github.com/celestiaorg/celestia-core-rpc-rs"
 readme     = "README.md"
 keywords   = ["blockchain", "cosmos", "celestia"]
