--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -3,20 +3,21 @@ name       = "celestia-tendermint-proto"
 version    = "0.34.0"
 edition    = "2021"
 license    = "Apache-2.0"
-homepage   = "https://www.eiger.co"
-repository = "https://github.com/eigerco/celestia-tendermint-rs"
+homepage   = "https://celestia.org/"
+repository = "https://github.com/celestiaorg/celestia-core-rpc-rs"
 readme     = "README.md"
 categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
 keywords   = ["blockchain", "tendermint", "proto"]
 
 description = """
-    This is a hard fork of tendermint to make it compatible with Celestia network.
-    tendermint-proto is a the Rust implementation of the Tendermint proto structs.
+    This is a hard fork of tendermint to make it compatible with the Celestia network.
+    celestia-tendermint-proto is the Rust implementation of the Celestia Core proto structs.
     """
 
 authors    = [
     "Informal Systems <hello@informal.systems>",
-    "Eiger <hello@eiger.co>"
+    "Eiger <hello@eiger.co>",
+    "Diego Ferrer <diego@celestia.org>"
 ]
 
 [package.metadata.docs.rs]
