--- a/tendermint/Cargo.toml
+++ b/tendermint/Cargo.toml
@@ -31,7 +31,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-celestia-tendermint-proto = { version = "0.34.0", default-features = false, path = "../proto" }
+celestia-core-proto = { version = "0.34.0", default-features = false, path = "../proto" }
 
 bytes = { version = "1.2", default-features = false, features = ["serde"] }
 digest = { version = "0.10", default-features = false }
